Fix color and background ready for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,71 +1,3 @@
-/* :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
 
 @import "tailwindcss";
 
@@ -117,15 +49,13 @@ button:focus-visible {
 
 
 @layer components {
-    .dark {
-        @apply  dark:bg-[#0a0a0a] dark:text-[#f3f3f3]
-    }
-    .light {
-      @apply bg-[#f5f5f5] text-[#0a0a0a];
+    .darkLight {
+        @apply bg-black text-white dark:bg-white dark:text-black
     }
 
+
     .Loading {
-      @apply fixed inset-0 z-50 bg-transparent flex flex-col items-center justify-center
+      @apply fixed inset-0 z-50 flex flex-col items-center justify-center bg-white dark:bg-black  text-black dark:text-white
     }
     .loading-container {
       @apply flex flex-col items-center
@@ -178,16 +108,7 @@ body{
   margin: 0;
   padding: 0;
   font-family: "mono", sans-serif;
-  /* background-color: #e7eaf1; */
-  /* background-color: #383838; */
-  /* background-color: #0a0a0a;*/ /*dark*/
-  /* background: #f5f5f5;  */
-  /*lmode*/
-  /* color: #e7eaf1; */
   color: #0a0a0a;
-  /*lmode*/
-  /* color: #f3f3f3; dmode */
-  /* overflow: hidden; */
 }
 
 @theme {
@@ -235,8 +156,11 @@ body{
   .logos-span {
     @apply dark:text-[#f3f3f3] text-[#0a0a0a]
   }
+  .footer-a {
+    @apply dark:text-gray-300 dark:hover:text-white
+  }
 
-  
+
 }
 
 .reveal {
@@ -248,3 +172,4 @@ body{
   opacity: 1;
   transform: translateY(0);
 }
+
